Fix issue where you could not bind to properties only exposed by Impl classes.

--- a/IfFastInjectorTest/IfFastInjectorTest.csproj
+++ b/IfFastInjectorTest/IfFastInjectorTest.csproj
@@ -41,6 +41,7 @@
     <Compile Include="MultipleInjectorsTest.cs" />
     <Compile Include="SingletonsTest.cs" />
     <Compile Include="ImplicitTypeTest.cs" />
+    <Compile Include="ConcreteTypesTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\IfFastInjector\IfFastInjector.csproj">
