Ran IoC shootout tests against code and dealt with easy to resolve hotspots. Still underperforming relative to closest peer (HaveBox).

--- a/IfFastInjector/IfFastInjector.csproj
+++ b/IfFastInjector/IfFastInjector.csproj
@@ -41,4 +41,7 @@
     <Compile Include="IfFastInjector.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <ItemGroup>
+    <None Include="TODO.txt" />
+  </ItemGroup>
 </Project>
