--- a/IfFastInjector/IfFastInjector.csproj
+++ b/IfFastInjector/IfFastInjector.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IfFastInjectorInternal.cs" />
     <Compile Include="IfFastInjector.cs" />
+    <Compile Include="IfFastInjectorInternal2.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
