--- a/IfFastInjector/IfFastInjector.csproj
+++ b/IfFastInjector/IfFastInjector.csproj
@@ -38,8 +38,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IfFastInjector.cs" />
-    <Compile Include="IfFastInjectorInternalLegacy.cs" />
     <Compile Include="IfFastInjectorInternal.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
