--- a/IfInjectorTest/IfInjectorTest.csproj
+++ b/IfInjectorTest/IfInjectorTest.csproj
@@ -5,13 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E223D620-7563-4C59-8361-B10A7C398723}</ProjectGuid>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{083C5427-83BA-4579-A000-AC49EE2F4105}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>FastInjectorMx</RootNamespace>
-    <AssemblyName>FastInjectorMx</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Profile37</TargetFrameworkProfile>
+    <RootNamespace>IfInjectorTest</RootNamespace>
+    <AssemblyName>IfInjectorMxTest</AssemblyName>
+    <ReleaseVersion>0.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,17 +29,32 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Xml" />
+    <Reference Include="nunit.framework">
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net" />
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Compile Include="InjectorTest.cs" />
+    <Compile Include="ResolverLoopTest.cs" />
+    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UnitTest2.cs" />
+    <Compile Include="MultipleInjectorsTest.cs" />
+    <Compile Include="SingletonsTest.cs" />
+    <Compile Include="ImplicitTypeTest.cs" />
+    <Compile Include="ConcreteTypesTest.cs" />
+    <Compile Include="PropertyInjectionTest.cs" />
+    <Compile Include="BindingAttributeTest.cs" />
+    <Compile Include="RecompilationTests.cs" />
+    <Compile Include="FactoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IfFastInjector.cs" />
-    <Compile Include="IfFastInjectorInternal.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <ItemGroup>
-    <None Include="TODO.txt" />
+    <ProjectReference Include="..\IfInjector\IfInjector.csproj">
+      <Project>{E223D620-7563-4C59-8361-B10A7C398723}</Project>
+      <Name>IfInjector</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
