--- a/IfInjector/IfInjector.csproj
+++ b/IfInjector/IfInjector.csproj
@@ -12,7 +12,10 @@
     <AssemblyName>IfInjector</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile104</TargetFrameworkProfile>
-    <ReleaseVersion>0.5</ReleaseVersion>
+    <ReleaseVersion>0.5.1</ReleaseVersion>
+    <Description>IfInjector is a lightweight, high performance micro-IoC container. The container is packaged as a PCL 104 library - suitable for WP7.1, Windows Store and SL4+ (MonoDroid, MonoTouch) project.
+
+Distinguishing features are small size, speed and full fledged attribute based configuration.</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,6 +48,7 @@
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
     <None Include="TODO.txt" />
+    <None Include="IfInjector.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="source\" />
