--- a/IfInjector/IfInjector.csproj
+++ b/IfInjector/IfInjector.csproj
@@ -12,10 +12,10 @@
     <AssemblyName>IfInjector</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile104</TargetFrameworkProfile>
-    <ReleaseVersion>0.5.1</ReleaseVersion>
-    <Description>IfInjector is a lightweight, high performance micro-IoC container. The container is packaged as a PCL 104 library - suitable for WP7.1, Windows Store and SL4+ (MonoDroid, MonoTouch) project.
+    <ReleaseVersion>0.6</ReleaseVersion>
+    <Description>IfInjector is a lightweight, high performance micro-IoC container. The container is packaged as a PCL 104 library - suitable for WP7.1, Windows Store and SL4+ (MonoDroid, MonoTouch) projects.
 
-Distinguishing features are small size, speed and full fledged attribute based configuration.</Description>
+Distinguishing features are small size, speed and attribute based configuration.</Description>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,8 +42,8 @@ Distinguishing features are small size, speed and full fledged attribute based c
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source\IfInjector.cs" />
-    <Compile Include="source\IfInjectorInternal.cs" />
-    <Compile Include="source\IfInjectorPlatform.cs" />
+    <Compile Include="source\IfInjector.Injector.cs" />
+    <Compile Include="source\IfInjector.IfCore.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
