--- a/IfInjector/IfInjector.csproj
+++ b/IfInjector/IfInjector.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>IfInjector</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile104</TargetFrameworkProfile>
-    <ReleaseVersion>0.6.2</ReleaseVersion>
+    <ReleaseVersion>0.7.0</ReleaseVersion>
     <Description>IfInjector is a lightweight, high performance micro-IoC container. The container is packaged as a PCL 104 library - suitable for WP7.1, Windows Store and SL4+ (MonoDroid, MonoTouch) projects.
 
 Distinguishing features are small size, speed and attribute based configuration.</Description>
@@ -44,6 +44,8 @@ Distinguishing features are small size, speed and attribute based configuration.
     <Compile Include="source\IfInjector.cs" />
     <Compile Include="source\IfInjector.Injector.cs" />
     <Compile Include="source\IfInjector.IfCore.cs" />
+    <Compile Include="source\IfInjector.IfBinding.cs" />
+    <Compile Include="source\IfInjector.IfLifestyle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
